fix: change card background color issue on Safari whereby the card div background color supercedes the animal image - background color changed to transparent

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,7 +364,7 @@ visibility: hidden;
 /* Card flip code from this site: https://dev.to/mugas/flip-cards-with-javascript-2ad0 */
 .card {
     display: flex;
-    background-color: #1B316D;
+    background-color: transparent;
     transform-style: preserve-3d;
     transition-duration: 2s;
     cursor: pointer;
